Set new close button with material design, set a larger margin

--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -8,9 +8,9 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="16dp"
+        android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
-        android:layout_marginLeft="8dp">
+        android:padding="16dp">
 
         <Spinner
             android:id="@+id/cc_spinner1"
@@ -18,25 +18,28 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner1"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner1"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner1"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn1"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -47,28 +50,30 @@
             android:layout_below="@id/cc_edit1"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner2"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner2"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner2"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn2"
             android:textAppearance="?android:attr/textAppearanceMedium" />
-
 
         <Spinner
             android:id="@+id/cc_spinner3"
@@ -77,25 +82,28 @@
             android:layout_below="@id/cc_edit2"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner3"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner3"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit3"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner3"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn3"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -106,25 +114,28 @@
             android:layout_below="@id/cc_edit3"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner4"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner4"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner4"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn4"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -135,25 +146,28 @@
             android:layout_below="@id/cc_edit4"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner5"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner5"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit5"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner5"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn5"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -164,25 +178,28 @@
             android:layout_below="@id/cc_edit5"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner6"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner6"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit6"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner6"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn6"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -193,25 +210,28 @@
             android:layout_below="@id/cc_edit6"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn7"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner7"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner7"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit7"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner7"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn7"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -222,25 +242,28 @@
             android:layout_below="@id/cc_edit7"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn8"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner8"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner8"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit8"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner8"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn8"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -251,25 +274,28 @@
             android:layout_below="@id/cc_edit8"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn9"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner9"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner9"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit9"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner9"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="@id/cc_btn9"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -280,25 +306,28 @@
             android:layout_below="@id/cc_edit9"
             android:layout_marginTop="16dp"
             android:entries="@array/labels" />
+
         <ImageButton
             android:id="@+id/cc_btn10"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_below="@id/cc_spinner10"
             android:layout_alignParentRight="true"
+            android:layout_below="@id/cc_spinner10"
+            android:layout_marginLeft="6dp"
+            android:padding="4dp"
             android:layout_marginTop="6dp"
-            android:layout_marginLeft="4dp"
-            android:src="@drawable/close_btn"
-            android:background="@null"
+            android:background="@drawable/btn_background"
             android:onClick="clearText"
+            android:src="@drawable/btn_close"
             android:textAppearance="?android:attr/textAppearanceMedium" />
+
         <EditText
             android:id="@+id/cc_edit10"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/cc_spinner10"
-            android:layout_marginTop="6dp"
             android:layout_marginRight="36dp"
+            android:layout_marginTop="6dp"
             android:tag="id/cc_btn10"
             android:textAppearance="?android:attr/textAppearanceMedium" />
 
