Renaming the app and package, cleaning up - externalized strings, corrected javadoc, put recognizer in the background. Added a button and feature to copy the scanned text to the system clipboard

--- a/app/src/main/res/layout/activity_create_contact.xml
+++ b/app/src/main/res/layout/activity_create_contact.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.google.android.gms.samples.vision.ocrreader.SetContactFieldsActivity">
+    tools:context="com.mezcode.demo.snap2contact.ocrreader.SetContactFieldsActivity">
 
     <RelativeLayout
         android:layout_width="match_parent"
