--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -7,18 +7,11 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin">
 
-    <TextView android:id="@+id/dlg_message"
+    <LinearLayout android:id="@+id/dlg_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="18dp"
-        android:gravity="center_horizontal"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Snap a card" />
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/dlg_message"  >
+        android:layout_alignParentBottom="true"
+        android:minHeight="16dp" >
         <ImageButton android:id="@+id/dlg_confirm"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -54,5 +47,14 @@
             android:layout_margin="16dp"
             android:padding="8dp" />
     </LinearLayout>
+    <TextView android:id="@+id/dlg_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:layout_above="@+id/dlg_buttons"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="18dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Snap a card" />
 
 </RelativeLayout>
