--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -7,7 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.mezcode.demo.snap2contact.ocrreader.StartActivity">
+    tools:context="com.mezcode.demo.roloscan.ocrreader.StartActivity">
 
     <TextView android:id="@+id/start_message"
         android:layout_width="match_parent"
