--- a/app/src/main/res/layout/activity_start.xml
+++ b/app/src/main/res/layout/activity_start.xml
@@ -22,7 +22,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:padding="12dp"
-        android:text="@string/gallery"
+        android:contentDescription="@string/gallery"
         android:src="@drawable/btn_gallery"
         android:background="@drawable/btn_background"
         android:onClick="getPhoto"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:padding="12dp"
-        android:text="@string/photo"
+        android:contentDescription="@string/photo"
         android:src="@drawable/btn_photo"
         android:background="@drawable/btn_background"
         android:onClick="getPhoto"
