--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -3,72 +3,64 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin">
-    <TextView android:id="@+id/dlg_message"
+    android:padding="8dp">
+
+    <LinearLayout android:id="@+id/dlg_buttons"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:scrollbars="vertical"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="18dp"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Snap a card" />
+        android:orientation="horizontal"
+        android:minHeight="16dp" >
 
-    <RelativeLayout android:id="@+id/dlg_buttons"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom"
-        android:minHeight="18dp">
-
-        <View android:id="@+id/center"
+        <ImageButton android:id="@+id/dlg_retry"
             android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_centerInParent="true"/>
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:src="@drawable/btn_redo"
+            android:contentDescription="@string/retry"
+            android:background="@drawable/btn_background"
+            android:onClick="dlg_button"
+            android:layout_margin="8dp"
+            android:padding="6dp"/>
 
         <ImageButton android:id="@+id/dlg_confirm"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/center"
+            android:layout_weight="1"
             android:src="@drawable/btn_done"
             android:contentDescription="@string/confirm"
             android:background="@drawable/btn_background"
             android:onClick="dlg_button"
-            android:layout_margin="12dp"
-            android:padding="8dp" />
-
-        <ImageButton android:id="@+id/dlg_retry"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_toLeftOf="@id/dlg_confirm"
-            android:src="@drawable/btn_redo"
-            android:contentDescription="@android:string/cancel"
-            android:background="@drawable/btn_background"
-            android:onClick="dlg_button"
-            android:layout_margin="12dp"
-            android:padding="8dp"/>
+            android:layout_margin="8dp"
+            android:padding="6dp" />
 
         <ImageButton android:id="@+id/dlg_share"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/center"
+            android:layout_weight="1"
             android:src="@drawable/btn_share"
             android:contentDescription="@string/share"
             android:background="@drawable/btn_background"
             android:onClick="dlg_button"
-            android:layout_margin="12dp"
-            android:padding="8dp" />
+            android:layout_margin="8dp"
+            android:padding="6dp" />
 
         <ImageButton android:id="@+id/dlg_clipboard"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_toRightOf="@id/dlg_share"
+            android:layout_weight="1"
             android:src="@drawable/btn_clipboard"
             android:contentDescription="@android:string/copy"
             android:background="@drawable/btn_background"
             android:onClick="dlg_button"
-            android:layout_margin="12dp"
-            android:padding="8dp" />
-    </RelativeLayout>
+            android:layout_margin="8dp"
+            android:padding="6dp" />
+    </LinearLayout>
+    <TextView android:id="@+id/dlg_message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:layout_margin="8dp"
+        android:padding="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Snap a card" />
 </LinearLayout>
