--- a/app/src/main/res/drawable/btn_gallery.xml
+++ b/app/src/main/res/drawable/btn_gallery.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_pressed="true" android:drawable="@drawable/ic_gallery_press" />
-    <item android:drawable="@drawable/ic_gallery" /> <!-- default case -->
+    <item android:drawable="@drawable/ic_photo_press" android:state_pressed="true" />
+    <item android:drawable="@drawable/ic_photo" /> <!-- default case -->
 </selector>
