Bit more polish, no more mipmap to try and make the Samsung icon look better

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -39,11 +39,9 @@
     </style>
 
     <style name="DialogButton">
-        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_margin">18dp</item>
         <item name="android:background">@drawable/btn_background</item>
-        <item name="android:padding">6dp</item>
         <item name="android:elevation">4dp</item>
-        <item name="android:onClick">dlg_button</item>
     </style>
 
 </resources>
