--- a/app/src/main/res/layout/dialog_confirm.xml
+++ b/app/src/main/res/layout/dialog_confirm.xml
@@ -17,7 +17,13 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/retry"
+            android:onClick="dlg_button"
             android:src="@drawable/btn_redo"/>
+
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight=".1" />
 
         <ImageButton android:id="@+id/dlg_confirm"
             style="DialogButton"
@@ -25,23 +31,31 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/confirm"
+            android:onClick="dlg_button"
             android:src="@drawable/btn_done" />
-
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight=".1" />
         <ImageButton android:id="@+id/dlg_share"
             style="DialogButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:contentDescription="@string/share"
+            android:onClick="dlg_button"
             android:src="@drawable/btn_share" />
-
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight=".1" />
         <ImageButton android:id="@+id/dlg_clipboard"
             style="DialogButton"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:background="@drawable/btn_background"
             android:contentDescription="@android:string/copy"
+            android:onClick="dlg_button"
             android:src="@drawable/btn_clipboard" />
     </LinearLayout>
 
